Issue #26754612: Tie dark modes together

--- a/tipit-react/public/dark.css
+++ b/tipit-react/public/dark.css
@@ -1,9 +1,9 @@
 body {
-    background-color: #252525;
+  background-color: #252525;
 }
 
 .main {
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .footer {
@@ -11,22 +11,23 @@ body {
 }
 
 .button {
-    background-color: #313131;
-    color: #FFFFFF;
+  background-color: #313131;
+  color: #ffffff;
 }
 
 .footer__text {
-    color: #FFFFFF;
+  color: #ffffff;
 }
 
 .calculator {
-	border: 10px solid #828282;
+  border: 10px solid #828282;
+  display: flex;
 }
 
 .calculator__top {
-	background-color: #828282;
+  background-color: #828282;
 }
 
 .calculator__app {
-	border: 10px solid #333333;
+  border: 10px solid #333333;
 }
