--- a/tipit-react/public/style.css
+++ b/tipit-react/public/style.css
@@ -3,80 +3,161 @@
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-	display: block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
 }
 body {
-	line-height: 1;
-    font-family: 'JetBrains Mono', monospace;
+  line-height: 1;
+  font-family: "JetBrains Mono", monospace;
 }
-ol, ul {
-	list-style: none;
+ol,
+ul {
+  list-style: none;
 }
-blockquote, q {
-	quotes: none;
+blockquote,
+q {
+  quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
 }
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 html,
 body {
-	width: 100%;
-	height: 100%;
-	margin: 0;
+  width: 100%;
+  height: 100%;
+  margin: 0;
 }
 
 h1 {
-    font-weight: 600;
-    font-size: 60px;
-    padding-bottom: 40px;
+  font-weight: 600;
+  font-size: 60px;
+  padding-bottom: 40px;
 }
 
 .main {
-    height: calc(100vh - 100px);
+  height: calc(100vh - 100px);
 }
 
 .main__text {
-    font-size: 21px;
-    line-height: 30px;
+  font-size: 21px;
+  line-height: 30px;
 }
 
 .button {
-    border: none;
-    padding: 16px 30px;
-    font-size: 24px;
-    font-weight: 600;
-    border-radius: 10px;
-    box-shadow: 0px 2px 10px rgba(0, 0, 0, .3);
+  border: none;
+  padding: 16px 30px;
+  font-size: 24px;
+  font-weight: 600;
+  border-radius: 10px;
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3);
 }
 
 .footer {
@@ -85,30 +166,30 @@ h1 {
   bottom: 0;
   left: 0;
   padding: 40px 0;
-	margin-top: 100vh;
+  margin-top: 100vh;
 }
 
 .footer__text {
-    font-size: 24px;
-    line-height: 30px;
-    font-weight: 600;
-    margin: 0;
+  font-size: 24px;
+  line-height: 30px;
+  font-weight: 600;
+  margin: 0;
 }
 
 .footer__link {
-    color: #E6787F;
-    text-decoration: none;
+  color: #e6787f;
+  text-decoration: none;
 }
 
 #canvas {
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-		width: 100%;
-		height: 100%;
-    z-index: -1;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
 }
 
 .toggle__wrapper {
@@ -124,7 +205,7 @@ h1 {
 
 .toggle:before,
 .toggle:after {
-  content: '';
+  content: "";
   display: table;
 }
 
@@ -135,7 +216,7 @@ h1 {
 input.toggle-input {
   cursor: pointer;
   position: absolute;
-	display: block;
+  display: block;
   top: 0;
   left: 0;
   width: 100%;
@@ -162,12 +243,12 @@ input.toggle-input {
 
 .moon {
   fill: #828282;
-  transition: fill .6s ease;
+  transition: fill 0.6s ease;
 }
 
 .shade {
-  transition: all .3s ease;
-  fill: #F2F2F2;
+  transition: all 0.3s ease;
+  fill: #f2f2f2;
 }
 .shade.toggle {
   transform: translate(96px);
@@ -175,7 +256,7 @@ input.toggle-input {
 
 .sun__part {
   fill: #000000;
-  transition: fill .6s ease;
+  transition: fill 0.6s ease;
 }
 
 .sun:hover .sun__part {
@@ -183,33 +264,34 @@ input.toggle-input {
 }
 
 .calculator {
-	border-radius: 14px;
-	position: relative;
-	height: 650px;
-	width: 400px;
-	padding: 10px;
-	box-shadow: 0px 2px 10px rgba(0, 0, 0, .4);
+  border-radius: 14px;
+  position: relative;
+  height: 650px;
+  width: 400px;
+  padding: 10px;
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.4);
+  display: flex;
 }
 
 .calculator__top {
-	position: absolute;
-	width: 222px;
-	height: 18px;
-	left: 0;
-	right: 0;
-	display: block;
-	top: 0;
-	margin: 0 auto;
-	border-bottom-left-radius: 20px;
-	border-bottom-right-radius: 20px;
-	z-index: 1;
+  position: absolute;
+  width: 222px;
+  height: 18px;
+  left: 0;
+  right: 0;
+  display: block;
+  top: 0;
+  margin: 0 auto;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  z-index: 1;
 }
 
 .calculator__app {
-	height: 100%;
-	position: absolute;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
 }
